syntax = "proto3";

import "google/api/annotations.proto"; //import related Google APIs

option csharp_namespace = "BookStore";

message Book {
    string title = 1;
    string author = 2;
    int32 page_count = 3;
    optional string language = 4;
}

message GetBookListRequest {}

message GetBookListResponse { repeated Book books = 1; }

service BookApp {
    rpc GetBookList(GetBookListRequest) returns (GetBookListResponse) {
        option (google.api.http) = {
            get: "/v1/book-store/books" //expose from this url
        };
    }
}